# Algo-Trading

./: .gitignore  21ema_backtest_OUTSTADING_RESULTS_FINALLY.py  21ema_crossover_51ema.py  21ema_login.ipynb  engulfing_trade_setup.ipynb  engulfing_trade_setup_main.py  pyproject.toml
